--- a/wiki.html
+++ b/wiki.html
@@ -16,7 +16,7 @@
           <div class="alert alert-primary" role="alert">
   This is a primary alert—check it out!
 </div>
-<h6><a href="#" class="alert-link">click here for random quote</a></h6>
+<h6><a href="#" class="alert-link">click here for more wikis</a></h6>
         </div>
         <div class="col-sm">
           <div class="alert alert-success" role="alert">
