display promise implemented

--- a/wiki.html
+++ b/wiki.html
@@ -16,7 +16,9 @@
           <div class="alert alert-primary" role="alert">
   This is a primary alert—check it out!
 </div>
-<h6><a href="#" class="alert-link">click here for more wikis</a></h6>
+<h6><button type="button" onclick="searchLat()">click for wiki geolocation</button></h6>
+<div id="cemo"></div>
+<div id="bemo"></div>
         </div>
         <div class="col-sm">
           <div class="alert alert-success" role="alert">
@@ -37,10 +39,9 @@
       </div>
       <div class="row">
         <div class="col-sm">
-          <form class="example" action="action_page.php">
-        <input type="text" placeholder="Search.." name="search">
-        <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
-        </form>
+
+        <button class="btn btn-primary" onclick="randon()"><i class="fa fa-search"></i></button>
+<div id="demo"></div>
         </div>
         <div class="col-sm">
 
@@ -51,7 +52,7 @@
       </div>
       <div class="row">
         <div class="col-sm">
-<h6>click icon to Search Location</h6>
+<h6>click icon to Get Random wiki</h6>
         </div>
         <div class="col-sm">
 
