display api response

--- a/wiki.html
+++ b/wiki.html
@@ -41,7 +41,16 @@
         <div class="col-sm">
 
         <button class="btn btn-primary" onclick="randon()"><i class="fa fa-search"></i></button>
-<div id="demo"></div>
+<div >
+  <label for="story">Tell us your story:</label>
+
+  <textarea id="demo" name="story"
+            rows="5" cols="83">
+  It was a dark and stormy night...
+  </textarea>
+
+</div>
+
         </div>
         <div class="col-sm">
 
